objects/ASI_eForm_HR_MDM__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Employee_Nationality_Country_2__c</fullName>
        <label>Nationality Country 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_PR_Affiliate__c</fullName>
        <label>PR Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alld Dom Spirits&amp;Wine Hld Ltd</fullName>
                </value>
                <value>
                    <fullName>Centre de Recherche Pernod Ricard (CRPR)</fullName>
                </value>
                <value>
                    <fullName>Chivas Brothers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Corby Distilleries</fullName>
                </value>
                <value>
                    <fullName>Cusenier</fullName>
                </value>
                <value>
                    <fullName>Dillon Bass</fullName>
                </value>
                <value>
                    <fullName>Domecq Bodegas</fullName>
                </value>
                <value>
                    <fullName>GH Mumm &amp; Cie / Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Havana Club International</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers Group</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Jan Becher</fullName>
                </value>
                <value>
                    <fullName>Martell &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Martell Mumm Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Orlando Wines</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Headquarter</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Andes</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Angola</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Argentina</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Argentina Cluster</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Armenia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Duty Free</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Headquarter</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Australia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Austria</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Baltics</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Belgium</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Bosnia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Brasil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Payinstrument__c</fullName>
        <label>Payinstrument</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Position_Entry_Date__c</fullName>
        <label>Position Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Postal_Code__c</fullName>
        <defaultValue>&apos;000-000&apos;</defaultValue>
        <inlineHelpText>Its format must be [000-000]</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employee_Last_Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>Internalization</fullName>
                </value>
                <value>
                    <fullName>Rehire</fullName>
                </value>
                <value>
                    <fullName>Position Change</fullName>
                </value>
                <value>
                    <fullName>Expatriation</fullName>
                </value>
                <value>
                    <fullName>Detachment</fullName>
                </value>
                <value>
                    <fullName>Local Transfer</fullName>
                </value>
                <value>
                    <fullName>End of expatriation</fullName>
                </value>
                <value>
                    <fullName>End of detachment</fullName>
                </value>
                <value>
                    <fullName>Resignation</fullName>
                </value>
                <value>
                    <fullName>Mutual agreement</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
                <value>
                    <fullName>Redundancies</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>End of contract</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Region_Code__c</fullName>
        <inlineHelpText>Entered only for Salesman</inlineHelpText>
        <label>Region Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Salesman_Code__c</fullName>
        <inlineHelpText>Entered only for Salesman</inlineHelpText>
        <label>Salesman Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Search_Type__c</fullName>
        <defaultValue>&apos;E&apos;</defaultValue>
        <label>Search Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Seniority_Date__c</fullName>
        <label>Group Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr</fullName>
                </value>
                <value>
                    <fullName>Sr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Swift_Code__c</fullName>
        <label>Swift Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Type__c</fullName>
        <label>Internal / External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Usual_Name__c</fullName>
        <label>Usual Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Work_Mobile_Phone__c</fullName>
        <label>Work Mobile Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_MDM_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Manager_GGID__c</fullName>
        <formula>ASI_eForm_Employee_Manager_Local_EEID__r.ASI_eForm_Employee_GGID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager GGID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_No_transfer_to_FTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No transfer to FTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>A&amp;P employees</relationshipLabel>
        <relationshipName>HR_MDMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HR MDM</label>
    <listViews>
        <fullName>ASI_eForm_MDM_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Employee_First_Name__c</columns>
        <columns>ASI_eForm_Employee_Last_Name__c</columns>
        <columns>ASI_eForm_Employee_GGID__c</columns>
        <columns>ASI_eForm_Employee_Birthdate__c</columns>
        <columns>ASI_eForm_Employee_Work_Email__c</columns>
        <columns>ASI_eForm_Employee_Effective_Date__c</columns>
        <columns>ASI_eForm_Employee_C_Effective_Date__c</columns>
        <columns>ASI_eForm_Employee_Status__c</columns>
        <columns>ASI_eForm_Employee_Contract_Type__c</columns>
        <columns>ASI_eForm_Employee_Job_Function__c</columns>
        <columns>ASI_eForm_Employee_Job_Title__c</columns>
        <columns>ASI_eForm_Employee_Manager_Full_Name__c</columns>
        <columns>ASI_eForm_Employee_Is_Salesman__c</columns>
        <columns>ASI_eForm_Employee_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_HR_MDM__c.ASI_eForm_KR_HR_MDM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_MDM_All_Active</fullName>
        <columns>ASI_eForm_Employee_Birthdate__c</columns>
        <columns>NAME</columns>
        <columns>ASI_eForm_Employee_First_Name__c</columns>
        <columns>ASI_eForm_Employee_Last_Name__c</columns>
        <columns>ASI_eForm_Employee_GGID__c</columns>
        <columns>ASI_eForm_Employee_Work_Email__c</columns>
        <columns>ASI_eForm_Employee_Status__c</columns>
        <columns>ASI_eForm_Employee_C_Effective_Date__c</columns>
        <columns>ASI_eForm_Employee_Contract_Type__c</columns>
        <columns>ASI_eForm_Employee_Job_Function__c</columns>
        <columns>ASI_eForm_Employee_Manager_Full_Name__c</columns>
        <columns>ASI_eForm_Employee_Is_Salesman__c</columns>
        <columns>ASI_eForm_Employee_Company_Code__c</columns>
        <columns>ASI_eForm_Employee_Company_Name_MDM__c</columns>
        <columns>ASI_eForm_Employee_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_HR_MDM__c.ASI_eForm_KR_HR_MDM</value>
        </filters>
        <filters>
            <field>ASI_eForm_Employee_Status__c</field>
            <operation>equals</operation>
            <value>Active,Suspended</value>
        </filters>
        <label>All_Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_MDM_Permanent_Active</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_eForm_Employee_First_Name__c</columns>
        <columns>ASI_eForm_Employee_Last_Name__c</columns>
        <columns>ASI_eForm_Employee_GGID__c</columns>
        <columns>ASI_eForm_Employee_Work_Email__c</columns>
        <columns>ASI_eForm_Employee_Status__c</columns>
        <columns>ASI_eForm_Employee_C_Effective_Date__c</columns>
        <columns>ASI_eForm_Employee_Contract_Type__c</columns>
        <columns>ASI_eForm_Employee_Job_Function__c</columns>
        <columns>ASI_eForm_Employee_Job_Title__c</columns>
        <columns>ASI_eForm_Employee_Manager_Full_Name__c</columns>
        <columns>ASI_eForm_Employee_Is_Salesman__c</columns>
        <columns>ASI_eForm_Employee_Company_Code__c</columns>
        <columns>ASI_eForm_Employee_Company_Name_MDM__c</columns>
        <columns>ASI_eForm_Employee_Branch_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_HR_MDM__c.ASI_eForm_KR_HR_MDM</value>
        </filters>
        <filters>
            <field>ASI_eForm_Employee_Status__c</field>
            <operation>equals</operation>
            <value>Active,Suspended</value>
        </filters>
        <filters>
            <field>ASI_eForm_Employee_Contract_Type__c</field>
            <operation>equals</operation>
            <value>Permanent</value>
        </filters>
        <label>Permanent_Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Local Employee ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR MDMs</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_HR_MDM</fullName>
        <active>true</active>
        <label>KR HR MDM Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_HR_MDM_External</fullName>
        <active>true</active>
        <label>KR HR MDM External</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>